LUCENE-1857: Convert NumericRangeQuery API to Generics (and some changes in MTQ, @Override, autoboxing in tests)
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/trunk@820792 13f79535-47bb-0310-9956-ffa450edef68